// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput basic can be initialized to 0 1`] = `
Object {
  "id": "amountCount",
  "max": 10,
  "min": 1,
  "name": "amountCount",
  "onChange": [MockFunction],
  "required": true,
  "step": 1,
  "value": 0,
}
`;

exports[`NumberInput basic exists 1`] = `
<Fragment>
  <FieldLabel
    data-requiredtext="*"
    htmlFor="amountCount"
  >
    Are you bringing any guests?
  </FieldLabel>
  <NumericalInput
    id="amountCount"
    max={10}
    min={1}
    name="amountCount"
    onChange={[MockFunction]}
    required={true}
    step={1}
    value={2}
  />
</Fragment>
`;

exports[`NumberInput basic input should have expected props 1`] = `
Object {
  "id": "amountCount",
  "max": 10,
  "min": 1,
  "name": "amountCount",
  "onChange": [MockFunction],
  "required": true,
  "step": 1,
  "value": 2,
}
`;

exports[`NumberInput basic should specify attributes that are passed in 1`] = `
<NumericalInput
  id="amountCount"
  name="amountCount"
  onChange={[MockFunction]}
  placeholder="Guests"
  step={1}
  value={2}
/>
`;
